--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://430153d8-f443-4b67-ab48-541799c51299.preview.emergentagent.com
 WDS_SOCKET_PORT=443
